--- a/app/views/foot.ejs
+++ b/app/views/foot.ejs
@@ -1,3 +1,3 @@
-<footer>Built by <a href="https://github.com/ErikPeterson" target="_blank">Erik S. Peterson</a> with <a href="http://www.expressjs.com" target="_blank">Express</a>, <a href="http://mongoosejs.com" target="_blank">Mongoose</a>, and <a href="http://d3js.org/">D3</a>.</footer>
+<footer>Built by <a href="https://github.com/ErikPeterson" target="_blank">Erik S. Peterson</a> with <a href="http://www.expressjs.com" target="_blank">Express</a>, <a href="http://mongoosejs.com" target="_blank">Mongoose</a>, and <a href="http://d3js.org/" target="_blank">D3</a>. Demo data generated with <a href="https://github.com/marak/Faker.js/" target="_blank">Faker.js</a></footer>
 </body>
 </html>
